git add README.md git commit -m "Add README.md with project overview, installation instructions, and usage details"